@@ -1,3 +1,7 @@
+2010-06-20  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14797: htmlArea RTE: Toolbar combo boxes do not float left in IE6 (Thnaks to Jigal van Hemert).
+
 2010-06-20  Susanne Moog  <typo3@susanne-moog.de>
 
 	* Followup to #14636: Improvements to new Backend skin - Install tool login shadow fixed 
